# SmartSchemaBuilder

./: .gitignore  CONTRIBUTING.MD  DB_UTILITY_IMPROVEMENTS.md  ERROR_HANDLING_SUMMARY.md  LICENSE  Readme.MD  UPGRADE_SUMMARY.md  config.env.example  export_to_csv.py  generate_sql_files.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_sql_files.py
common/: ai_provider.py  error_handler.py  exceptions.py  library.py  openai_utility.py  validators.py
db_utility/: database.py  database_column.py  database_foreign_key.py  database_table.py  database_utility.py  mysql.py  mysql_utility.py  postgresql.py  postgresql_utility.py  sqlserver.py  sqlserver_utility.py
docs/: faq.md  installation.md  license.md  scripts_description.md  usage.md  workflows.md
test_data/: Readme.MD
test_data/medical/: clients.csv  data_items_in_tests.csv  ddl_medical.json  payments.csv  staff.csv  test_data_items.csv  test_definitions.csv  test_results.csv  test_types.csv  tests_administered.csv
test_data/medical/mysql/: ddl_mysql.sql  insert_clients.sql  insert_data_items_in_tests.sql  insert_payments.sql  insert_test_results.sql  insert_test_types.sql
test_data/medical/postgresql/: ddl_postgresql.sql  insert_clients.sql  insert_data_items.sql  insert_dataitems.sql  insert_payments.sql  insert_test_data_items.sql  insert_test_results.sql  insert_test_types.sql  insert_testdataitems.sql  insert_testdefinitions.sql  insert_testresults.sql  insert_tests.sql  insert_tests_administered.sql  insert_testtypes.sql
test_data/medical/sqlserver/: ddl_sqlserver.sql  insert_staff.sql  insert_test_data_items.sql  insert_test_definitions.sql  insert_test_results.sql  insert_tests_administered.sql
